# mallchat

./: .gitignore  CHANGELOG.md  CN.Dockerfile  Cargo.toml  Dockerfile  README.md  Secrets.example.toml  docker-compose.example.yml  lcov.info  server.example.toml
.github/workflows/: main.yml
doc/: config.cn.toml
html/: index.html
html/assets/: index-2957ef0e.css  index-35ad89c9.css  index-73a60604.js  index-d8163a52.js  worker-7009ea7c.js
script/: init.sql
src/: cache.rs  handler.rs  lib.rs  log.rs  storage.rs  weixin.rs
src/handler/: api.rs  auth.rs  chat.rs  user.rs  wechat.rs  ws.rs
src/storage/model/: black.rs  item_config.rs  message.rs  message_mark.rs  mod.rs  prelude.rs  room.rs  user.rs  user_backpack.rs  wx_msg.rs
src/weixin/: xml.rs
