[package]
name = "mallchat"
version = "0.1.0"
authors = ["GengTeng <me@gteng.org>"]
description = "MallChat backend"
edition = "2021"
license = "Apache-2.0"
readme = "README.md"

[[bin]]
name = "mallchat"
path = "src/bin/server.rs"

[dependencies]
anyhow = "1.0.71"
axum = { version = "0.6.18", features = ["ws", "headers"] }
axum-valid = "0.2.1"
byte-unit = { version = "4.0.19", features = ["serde"], default-features = false }
bytes = "1.4.0"
config = "0.13.3"
dashmap = "5.4.0"
hex = "0.4.3"
jsonwebtoken = "8.3.0"
mime = "0.3.17"
num = "0.4.0"
redis = { version = "0.23.0", features = ["tokio-comp", "tokio-rustls"] }
rolling-file = "0.2.0"
serde = { version = "1.0.163", features = ["derive"] }
serde-xml-rs = "0.6.0"
serde_json = "1.0.96"
sha1 = "0.10.5"
thiserror = "1.0.40"
time = { version = "0.3", features = ["formatting", "serde-human-readable"] }
tokio = { version = "1.28.2", features = ["full"] }
tracing = "0.1.37"
tracing-appender = { version = "0.2.2" }
tracing-subscriber = { version = "0.3.17", features = ["json", "time", "local-time"] }
utoipa = { version = "3.3.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "3.1.3", features = ["axum"] }
validator = { version = "0.16.0", features = ["derive"] }

aes = "0.8.2"
base64 = "0.21.2"
cbc = { version = "0.1.2", features = ["alloc"] }
tower-http = { version = "0.4.0", features = ["fs", "trace"] }
reqwest = { version = "0.11.18", features = ["json", "rustls-tls"], default-features = false}
slab = "0.4.8"
parking_lot = "0.12.1"
serde_repr = "0.1.12"
urlencoding = "2.1.2"

sea-orm = { version = "0.11.3", features = ["runtime-tokio-rustls", "sqlx-mysql"] }
